# src/configs/swagger.json
@@ -106,6 +106,163 @@
             "description": "Not valid"
           }
         }
+      },
+      "put": {
+        "summary": "Update a Question",
+        "description": "Update a Question",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "question",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Question"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Question"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Not valid"
+          }
+        }
+      },
+      "get": {
+        "summary": "Find Questions valid",
+        "description": "Find Questions valid",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Question"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/questions/categories": {
+      "post": {
+        "summary": "Add new Category",
+        "description": "Add new Category",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "category",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/NewCategory"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "CREATED",
+            "schema": {
+              "$ref": "#/definitions/Category"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Not valid"
+          }
+        }
+      },
+      "get": {
+        "summary": "Find categories",
+        "description": "Find categories",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Category"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/questions/updated/{date}": {
+      "get": {
+        "summary": "Find Questions valid by date",
+        "description": "Find Questions valid by date",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "date",
+            "required": true,
+            "type": "string",
+            "format": "date"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Question"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/questions/paginate": {
+      "get": {
+        "summary": "Find page of Questions",
+        "description": "Find page of Questions",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "required": true,
+            "type": "number"
+          },
+          {
+            "in": "query",
+            "name": "perPage",
+            "required": true,
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Question"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
       }
     }
   },
